--- a/technology.css
+++ b/technology.css
@@ -12,6 +12,12 @@
             margin-top: -5px;
             margin-left: -9px;
             width: 81.6rem;
+            @media (max-width:480px){
+           padding:0px;
+            }
+            @media(max-width:992px){
+                    padding:0px;
+            }
           }
 
           .in{
@@ -32,6 +38,8 @@
           text-transform: uppercase;
           padding-left: 29px;
           word-spacing:4px ;
+        @media (max-width:480px)
+                {padding:0px}
             
         }
 
