--- a/technology.css
+++ b/technology.css
@@ -193,6 +193,17 @@ font-size: 23px;
   color: white;
   font-weight: bold;
 }
+                
+.men{
+display:flex;
+@media (max-width:480px){
+        padding:0px;
+}
+        @media (max-width:992px){
+                padding:0px;
+        }
+}
+                
 .end{
   margin-left: 70px;
   margin-top: 70px;
