--- a/technology.css
+++ b/technology.css
@@ -14,6 +14,8 @@
             width: 81.6rem;
             @media (max-width:480px){
            padding:0px;
+           font-size:20px;
+                    display:inline-block;
             }
             @media(max-width:992px){
                     padding:0px;
