--- a/technology.css
+++ b/technology.css
@@ -148,6 +148,7 @@ transition-timing-function: ease;
  border-radius: 20px; 
         @media(max-width:480px){
                 padding-top:0px;
+                font-size:20px;
         }
 @media (max-width:992px;)
 }
