--- a/support.css
+++ b/support.css
@@ -3,11 +3,14 @@ body{
 }
 
 
-
-
 li{
   list-style: none;
   margin-top: 20px;
+  @media (max-width:992px) {
+    
+    font-family:'Times New Roman', Times, serif;
+    font-weight: 500;
+  }
   
 }
 
@@ -22,6 +25,12 @@ font-size: 21px;
 background-color: white;
 weight:bold;
 
+@media (max-width:992px) {
+  width: 570px;
+  height: 70px;
+  gap:20px;
+}
+
 }
 
 
@@ -35,4 +44,12 @@ color:red;
 }
 a:active{
 color:green;
+}
+
+.fam{
+  @media (max-width:992px) {
+    width: 547px;
+    height: 280px;
+    
+  }
 }
