--- a/html.css
+++ b/html.css
@@ -1,132 +1,52 @@
 body{
+  background-color:  rgb(204, 8, 8);
+}
 
+
+li{
+  list-style: none;
+  margin-top: 20px;
+  @media (max-width:992px) {
+    
+    font-family:'Times New Roman', Times, serif;
+    font-weight: 500;
+  }
   
-  background: linear-gradient(to right,red, black);
+}
 
-  @media(max-width:992px)
-  {
-    width: 470px;
-    height: 80px;
-  }
-
-
-  li{
-    list-style: none;
-    margin-top: 20px;
-    margin-left: -15px;
-    font-weight: bold;
-    
-    
-   
-   
-  }
 
 .hero{
-  border: 3px solid white;
-  
-  height: 60px;
-  display: flex;
-  gap:40px;
-  font-size: 21px;
-  background-color: white;
-  
+border: 3px solid white;
 
+height: 60px;
+display: flex;
+gap:40px;
+font-size: 21px;
+background-color: white;
+weight:bold;
 
-  @media(max-width:992px)
-  {
-    width: 500px;
-    height: 80px;
-    gap:25px;
-  }
-  
+@media (max-width:992px) {
+  width: 570px;
+  height: 70px;
+  gap:20px;
+}
+
 }
 
 
 
 a{
-  text-decoration: none;
-  color: black;
+text-decoration: none;
+color: black;
 }
 a:hover{
-  color:red;
+color:red;
 }
 a:active{
-  color:green;
+color:green;
 }
 
-h1{
-  color:white;
-  
-}
-
-.back
-{
-  font-size: 20px;   
-}
-.back:hover{
-  color:red;
-}
-.back:active{
-  color:green;
-}
-
-}
-
-.keep{
-  @media (max-width:992px) {
-    width: 547px;
-    height: 280px;
-    
-  }
-}
-
-.dif1{
-  @media (max-width:992px) {
-    width: 547px;
-    height: 280px;
-    
-  }
-}
-.dif2{
-  @media (max-width:992px) {
-    width: 547px;
-    height: 280px;
-    
-  }
-}
-.dif3{
-  @media (max-width:992px) {
-    width: 547px;
-    height: 280px;
-    
-  }
-}
-
-.mid1{
-  @media (max-width:992px) {
-    width: 547px;
-    height: 280px;
-    
-  }
-}
-
-.mid2{
-  @media (max-width:992px) {
-    width: 547px;
-    height: 280px;
-    
-  }
-}
-
-.str1{
-  @media (max-width:992px) {
-    width: 547px;
-    height: 280px;
-    
-  }
-}
-
-.str2{
+.fam{
   @media (max-width:992px) {
     width: 547px;
     height: 280px;
